Blacklist "X.Org" < 7.0 with the buggy_repeat workaround.

This is in response to a report that a 6.9 server crashes with
cairo's extend-reflect test:

https://bugs.freedesktop.org/show_bug.cgi?id=15628#c2